--- a/antora.yml
+++ b/antora.yml
@@ -1,15 +1,15 @@
 name: server
 title: ownCloud Server
-version: next
+version: 10.8
 start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/partials/nav.adoc
 
 asciidoc:
   attributes:
-    minimum-php-version: '7.3'
-    minimum-php-printed: '7.3.0'
-    minimum-php-version-short-code: '73'
+    minimum-php-version: '7.2'
+    minimum-php-printed: '7.2.5'
+    minimum-php-version-short-code: '725'
     recommended-php-version: '7.4'
     recommended-php-version-short-code: '74'
-    supported-php-versions: '7.3 and 7.4'
+    supported-php-versions: '7.2.5, 7.3 and 7.4'
