--- a/site.yml
+++ b/site.yml
@@ -20,21 +20,24 @@ output:
 
 asciidoc:
   attributes:
-    branch-specific-variables: 'see antora.yml'
+#   branch-specific-variables: 'see antora.yml'
+#   build relevant
     idprefix: ''
     idseparator: '-'
     experimental: ''
-    latest-server-version: '10.9'
-    latest-server-download-version: '10.9.1'
-    previous-server-version: '10.8'
-    current-server-version: '10.9'
+#   common
     docs-base-url: 'https://doc.owncloud.com'
     oc-contact-url: 'https://owncloud.com/contact/'
     oc-help-url: 'https://owncloud.com/docs-guides/'
     oc-marketplace-url: 'https://marketplace.owncloud.com'
-    oc-changelog-url: 'https://owncloud.com/changelog/server/'
     oc-central-url: 'https://central.owncloud.org'
     oc-support-url: 'https://owncloud.com/support'
+#   server
+    latest-server-version: '10.9'
+    latest-server-download-version: '10.9.1'
+    previous-server-version: '10.8'
+    current-server-version: '10.9'
+    oc-changelog-url: 'https://owncloud.com/changelog/server/'
     oc-install-package-url: 'https://software.opensuse.org//download.html?project=isv%3AownCloud%3Aserver%3A10&package=owncloud-complete-files'
     oc-examples-server-url: 'https://owncloud.install.com/owncloud'
     oc-examples-server-ip: '127.0.0.1'
@@ -43,7 +46,6 @@ asciidoc:
     oc-complete-name: 'owncloud-complete-20220112'
     occ-command-example-prefix: 'sudo -u www-data php occ'
     occ-command-example-prefix-no-sudo: 'php occ'
-    page-component-build-list: 'docs, server, ocis, user, desktop, ios-app, android'
     php-net-url: 'https://www.php.net'
     php-supported-versions-url: 'https://www.php.net/supported-versions.php'
     http-status-codes-base-url: 'https://developer.mozilla.org/en-US/docs/Web/HTTP/Status'
