[10.8] [PR 151] Inactivate the user guide
Backport of PR #151

--- a/site.yml
+++ b/site.yml
@@ -64,6 +64,9 @@ asciidoc:
     std-port-memcache: '11211'
     std-port-mysql: '3306'
     std-port-redis: '6379'
+#   webui
+    latest-webui-version: 'next'
+    previous-webui-version: 'next'
 #   ocis
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
