[10.8] [PR 290] replace deprecated download.owncloud.org url
Backport of PR #290

--- a/site.yml
+++ b/site.yml
@@ -52,11 +52,12 @@ asciidoc:
     previous-server-version: '10.8'
     current-server-version: '10.9'
     oc-changelog-url: 'https://owncloud.com/changelog/server/'
-    oc-install-package-url: 'https://software.opensuse.org//download.html?project=isv%3AownCloud%3Aserver%3A10&package=owncloud-complete-files'
+    oc-install-package-url: 'https://software.opensuse.org/download.html?project=isv%3AownCloud%3Aserver%3A10&package=owncloud-complete-files'
     oc-examples-server-url: 'https://owncloud.install.com/owncloud'
     oc-examples-server-ip: '127.0.0.1'
     oc-examples-username: 'username'
     oc-examples-password: 'password'
+    oc-complete-base-url: 'https://download.owncloud.com/server/stable'
     oc-complete-name: 'owncloud-complete-latest'
     occ-command-example-prefix: 'sudo -u www-data php occ'
     occ-command-example-prefix-no-sudo: 'php occ'
