Fix various typos

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -87,7 +87,7 @@ labels:
   - name: enhancement
     color: 02e10c
     description: New feature or request.
-  - name: enterpise docs
+  - name: enterprise docs
     color: 6040ad
   - name: enhancement-PM
     color: FF9900
