[10.8] [PR 327] Adding global attribute for ocis
Backport of PR #327

--- a/site.yml
+++ b/site.yml
@@ -74,6 +74,9 @@ asciidoc:
 #   ocis
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
+    ocis-version: '2.0.0-beta1'
+    ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/testing/'
+    ocis-ext-includes: 'https://raw.githubusercontent.com/owncloud/ocis/docs/extensions/_includes/'
 #   desktop
     latest-desktop-version: 'next'
     previous-desktop-version: 'next'
