--- a/site.yml
+++ b/site.yml
@@ -74,7 +74,7 @@ asciidoc:
 #   ocis
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
-    ocis-version: '2.0.0-beta3'
+    ocis-version: '2.0.0-beta.3'
     ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/testing/'
 #   desktop
     latest-desktop-version: 'next'
