--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: server
 title: ownCloud Server
-version: next
+version: '10.12'
 start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/partials/nav.adoc
