--- a/site.yml
+++ b/site.yml
@@ -74,8 +74,9 @@ asciidoc:
 #   ocis
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
-    ocis-version: '2.0.0'
-    ocis-compiled: '2022-11-30 00:00:00 +0000 UTC'
+    ocis-actual-version: '3.0.0'
+    ocis-former-version: '2.0.0'
+    ocis-compiled: '2023-06-07 00:00:00 +0000 UTC'
     ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/stable/'
 #   desktop
     latest-desktop-version: 'next'
